--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="squat">Squat</string>
     <string name="deadlift">Deadlift</string>
     <string name="bench_press">Bench Press</string>
-    <string name="reset_cardio_records">reset_cardio_records</string>
-    <string name="reset_lifting_records">reset_lifting_records</string>
-    <string name="reset_all_records">reset_all_records</string>
+    <string name="reset_cardio_records">Reset cardio records</string>
+    <string name="reset_lifting_records">Reset lifting records</string>
+    <string name="reset_all_records">Reset all records</string>
 </resources>
